# cookiecutter-fortran-project

./: README.rst  cookiecutter.json
.github/workflows/: ci.yml
hooks/: post_gen_project.py
templates/: app-coarray.f90  app-mpi.f90  app-serial.f90  example-coarray.f90  example-mpi.f90  example-serial.f90  lib-coarray.f90  lib-mpi.f90  lib-serial.f90  testapp-coarray-fortuno.f90  testapp-coarray.f90  testapp-mpi-fortuno.f90  testapp-mpi.f90  testapp-serial.f90
test/cc-replay/: cmake-coarray-fortuno.json  cmake-coarray-none.json  cmake-coarray.json  cmake-mpi-fortuno.json  cmake-mpi-none.json  cmake-mpi.json  cmake-serial-fortuno.json  cmake-serial-none.json  cmake-serial.json  fpm-coarray-fortuno.json  fpm-coarray-none.json  fpm-coarray.json  fpm-mpi-fortuno.json  fpm-mpi-none.json  fpm-mpi.json  fpm-serial-fortuno.json  fpm-serial-none.json  fpm-serial.json  meson-coarray-fortuno.json  meson-coarray-none.json  meson-coarray.json  meson-mpi-fortuno.json  meson-mpi-none.json  meson-mpi.json  meson-serial-fortuno.json  meson-serial-none.json  meson-serial.json
test/cmake-coarray/: cc-replay.json  test.sh
test/cmake-coarray/export/: CMakeLists.txt  export_test.f90
test/cmake-mpi/: cc-replay.json  test.sh
test/cmake-mpi/export/: CMakeLists.txt  export_test.f90
test/cmake-serial/: cc-replay.json  test.sh
test/cmake-serial/export/: CMakeLists.txt  export_test.f90
test/runners/: init.sh  test.cmake-coarray.sh  test.cmake-mpi.sh  test.cmake-serial.sh  test.cmake.sh  test.fpm-coarray.sh  test.fpm-mpi.sh  test.fpm-serial.sh  test.fpm.sh  test.meson-coarray.sh  test.meson-mpi.sh  test.meson-serial.sh  test.meson.sh
test/testers/export_test.coarray/: CMakeLists.txt  meson.build  meson.options
test/testers/export_test.coarray/app/: CMakeLists.txt  export_test.f90  meson.build
test/testers/export_test.mpi/: CMakeLists.txt  fpm.toml.in  meson.build
test/testers/export_test.mpi/app/: CMakeLists.txt  export_test.f90  meson.build
test/testers/export_test.serial/: CMakeLists.txt  fpm.toml.in  meson.build
test/testers/export_test.serial/app/: CMakeLists.txt  export_test.f90  meson.build
{{ cookiecutter.project_slug }}/: .gitignore  CMakeLists.txt  README.md  fpm.toml  meson.build  meson.options
{{ cookiecutter.project_slug }}/app/: CMakeLists.txt  meson.build  {{ cookiecutter.project_slug }}_app.f90
{{ cookiecutter.project_slug }}/cmake/: {{ cookiecutter.project_name }}Config.cmake.in  {{ cookiecutter.project_name }}Helpers.cmake  {{ cookiecutter.project_slug }}.pc.in
{{ cookiecutter.project_slug }}/config/cmake/: {{ cookiecutter.project_name }}Helpers.cmake
{{ cookiecutter.project_slug }}/example/: CMakeLists.txt  meson.build  {{ cookiecutter.project_slug }}_example.f90
{{ cookiecutter.project_slug }}/meson/: install-modules.py
{{ cookiecutter.project_slug }}/src/: CMakeLists.txt  meson.build  {{ cookiecutter.project_slug }}.f90
{{ cookiecutter.project_slug }}/subprojects/: Fortuno.cmake  FortunoCoarray.cmake  FortunoMpi.cmake  fortuno-coarray.wrap  fortuno-mpi.wrap  fortuno.wrap
{{ cookiecutter.project_slug }}/test/: CMakeLists.txt  meson.build  testapp.f90
